<resources>
    <string name="app_name">SaltManager</string>
    <string name="action_pick_date">日付を選択</string>
    <string name="action_chart">グラフ</string>
    <string name="action_settings">設定</string>
    <string name="add">追加</string>
    <string name="label_g">g</string>
    <string name="label_mg">mg</string>
    <string name="label_date">日付</string>
    <string name="label_total_salt">総塩分量</string>
    <string name="label_food">食品名</string>
    <string name="label_sodium">ナトリウム</string>
    <string name="label_salt">食塩相当量</string>
    <string name="label_stack_salt">食塩量</string>
    <string name="label_stack_over">目標超過分</string>
    <string name="label_gram">[g]</string>
    <string name="toast_error">値が不正です。</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">キャンセル</string>
    <string name="dialog_title_confirm">確認</string>
    <string name="dialog_delete_confirm">削除しますか？</string>
    <string name="preference_settings">設定</string>
    <string name="preference_salt_threshold">食塩量目標値 [g]</string>
    <string name="preference_about_this_app">このアプリについて</string>
    <string name="preference_open_source_licenses">オープンソース ライセンス</string>
</resources>
