<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin" android:orientation="vertical">

    <TextView
            android:id="@+id/textViewDateLabel"
            android:text="@string/label_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

    <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
            android:id="@+id/textViewFoodLabel"
            android:text="@string/label_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

    <EditText
            android:id="@+id/editTextFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:inputType="text"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/textViewSodiumLabel"
                    android:text="@string/label_sodium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <EditText
                        android:id="@+id/editTextSodium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:inputType="number"
                        android:layout_toLeftOf="@+id/textViewMilliGramme"
                        android:layout_toStartOf="@+id/textViewMilliGramme"/>
                <TextView
                        android:id="@+id/textViewMilliGramme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_mg"
                        android:layout_margin="8dp"
                        android:layout_alignBottom="@+id/editTextSodium"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/textViewSaltLabel"
                    android:text="@string/label_salt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <EditText
                        android:id="@+id/editTextSalt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:inputType="numberDecimal"
                        android:layout_toLeftOf="@+id/textViewGramme"
                        android:layout_toStartOf="@+id/textViewGramme"/>
                <TextView
                        android:id="@+id/textViewGramme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_g"
                        android:layout_margin="8dp"
                        android:layout_alignBottom="@+id/editTextSalt"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>